--- a/Pages/Game_Pacman.html
+++ b/Pages/Game_Pacman.html
@@ -34,7 +34,7 @@
 	<script src="/js/tether.min.js"></script>
 	<script src="/js/script.js"></script>
 	<script>
-		window.google = {}
+		window.google = {};
 	</script>
 </head>
 <body onload="calcTime()" style="margin:0;">
@@ -42,6 +42,7 @@
 <div style="display:none;" id="webDiv" class="animate-bottom">
 <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-faded" w3-include-html="/src/Header.html"></nav>
   <center>
+  <br />
   <div id="wrapper">
   	<a href="#gameover" id="dlink"></a>
   	<div id='logo' title="PAC-MAN's 37th Birthday! Doodle with PAC-MAN™ and ©1980 NAMCO BANDAI Games Inc.">
