Refactor App_APIHub.html
Signed-off-by: CDAGaming <cstack2011@yahoo.com>

--- a/Pages/App_APIHub.html
+++ b/Pages/App_APIHub.html
@@ -1,6 +1,5 @@
-<!doctype HTML>
+<!DOCTYPE HTML>
 <html lang="en">
-
 <head>
 	<meta char="UTF-8">
 	<title> Apps - APIHub for Pokemon GO! </title>
@@ -32,9 +31,8 @@
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/jquery.min.js"></script>
 	<script src="/js/tether.min.js"></script>
-	<script src="/js/ExtScript.js"></script>
+	<script src="/js/script.js"></script>
 </head>
-
 <body onload="calcTime()" style="margin:0;">
 	<div id="loader"></div>
 	<div style="display:none;" id="webDiv" class="animate-bottom">
