Updated API Keys for June 2017 (2)
This Commit also adds a Contributors List, by User Requests

Signed-off-by: CDAGaming <cstack2011@yahoo.com>

--- a/Pages/App_APIHub.html
+++ b/Pages/App_APIHub.html
@@ -41,7 +41,8 @@
 			<h1>API Hub for Pokemon GO</h1>
 			<br></br>
 			<center>
-				<a class="navbar-btn btn-primary btn" href="http://www.mediafire.com/?6diedpf89aucp"><i class="fa fa-windows" aria-hidden="true"></i> Download </a>
+				<a class="navbar-btn btn-primary btn" href="https://www.mediafire.com/?6diedpf89aucp"><i class="fa fa-windows" aria-hidden="true"></i> Download </a>
+				<a class="navbar-btn btn-primary btn" href="https://pastebin.com/raw/nHUp1WQR"> Contributors </a>
 				<a class="navbar-btn btn-primary btn" href="https://github.com/CDAGaming/APIHub"><i class="fa fa-github" aria-hidden="true"></i> Source </a>
 			</center>
 			<br></br>
@@ -84,6 +85,26 @@
 					</tr>
 					<tr>
 						<td>6W0C3O6Y1N4U7L7L2Q4C</td>
+						<td style="color:#00E676"><b>150</b></td>
+						<td>5/28/2017</td>
+					</tr>
+					<tr>
+						<td>0Y2F7Y6Y4S1Y9R1P1I5M</td>
+						<td style="color:#00E676"><b>150</b></td>
+						<td>5/28/2017</td>
+					</tr>
+					<tr>
+						<td>3F0J0V3P4Z7Y6H9A8P5Z</td>
+						<td style="color:#00E676"><b>150</b></td>
+						<td>5/28/2017</td>
+					</tr>
+					<tr>
+						<td>1L0W9B1U4M6X7U7Y5V2U</td>
+						<td style="color:#00E676"><b>150</b></td>
+						<td>5/28/2017</td>
+					</tr>
+					<tr>
+						<td>8W5F5G9X0H6M4W9E5B6I</td>
 						<td style="color:#00E676"><b>150</b></td>
 						<td>5/28/2017</td>
 					</tr>
