--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
 	<!-- Font Awesome (neccessary for Custom Icons) -->
 	<link rel="stylesheet" href="/css/font-awesome.min.css">
 	<!-- END FONT AWESOME CODE -->
-	<!-- jQuery & Tether (necessary for Bootstrap's JavaScript plugins) -->
+	<!-- jQuery & Tether & Popper (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.9.9/popper.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/jquery.min.js"></script>
 	<script src="/js/tether.min.js"></script>
+	<script src="/js/popper.js"></script>
 	<script src="/js/script.js"></script>
 </head>
 <body onload="calcTime()" style="margin:0;">
