Test Using Latest Dependencies
Signed-off-by: CDAGaming <cstack2011@yahoo.com>

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<title> TeamCDA Website - Home! </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://www.w3schools.com/lib/w3data.js"></script>
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/tether.min.css" rel="stylesheet">
@@ -25,9 +24,9 @@
 	<link rel="stylesheet" href="/css/font-awesome.min.css">
 	<!-- END FONT AWESOME CODE -->
 	<!-- jQuery & Tether & Popper (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.9.9/popper.js"></script>
+	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/jquery.js"></script>
+	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/tether.js"></script>
+	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/popper.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/jquery.min.js"></script>
