--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 	<!-- END FONT AWESOME CODE -->
 	<!-- jQuery & Tether & Popper (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/jquery.min.js"></script>
-	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/popper.min.js"></script>
+	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/umd/popper.min.js"></script>
 	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/tether.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/jquery.min.js"></script>
 	<script src="/js/tether.min.js"></script>
-	<script src="/js/popper.min.js"></script>
+	<script src="/js/umd/popper.min.js"></script>
 	<script src="/js/script.js"></script>
 </head>
 <body onload="calcTime()" style="margin:0;">
