--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 	<!-- Font Awesome (neccessary for Custom Icons) -->
 	<link rel="stylesheet" href="/css/font-awesome.min.css">
 	<!-- END FONT AWESOME CODE -->
-	<!-- jQuery & Tether & Popper (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/bootstrap.min.js"></script>
+	<!-- Scripts and CDN's -->
 	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/jquery.min.js"></script>
+	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/bootstrap.min.js"></script>
 	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/umd/popper.min.js"></script>
 	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/tether.min.js"></script>
+	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/script.js"></script>
 </head>
 <body onload="calcTime()" style="margin:0;">
 	<div id="loader"></div>
