--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 	<link rel="stylesheet" href="/css/font-awesome.min.css">
 	<!-- END FONT AWESOME CODE -->
 	<!-- Scripts and CDN's -->
-	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/jquery.min.js"></script>
-	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/bootstrap.min.js"></script>
-	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/umd/popper.min.js"></script>
-	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/tether.min.js"></script>
+	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/jquery.js"></script>
+	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/umd/popper.js"></script>
+	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/tether.js"></script>
+	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/bootstrap.js"></script>
 	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/script.js"></script>
 </head>
 <body onload="calcTime()" style="margin:0;">
