--- a/Pages/Game_Pacman.html
+++ b/Pages/Game_Pacman.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
   <title>Google Pac-Man</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://www.w3schools.com/lib/w3data.js"></script>
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/tether.min.css" rel="stylesheet">
@@ -25,14 +24,12 @@
 	<!-- Font Awesome (neccessary for Custom Icons) -->
 	<link rel="stylesheet" href="/css/font-awesome.min.css">
 	<!-- END FONT AWESOME CODE -->
-	<!-- jQuery & Tether (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="/js/bootstrap.min.js"></script>
-	<script src="/js/jquery.min.js"></script>
-	<script src="/js/tether.min.js"></script>
-	<script src="/js/script.js"></script>
+	<!-- Scripts and CDN's -->
+	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/jquery.js"></script>
+	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/umd/popper.js"></script>
+	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/tether.js"></script>
+	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/bootstrap.js"></script>
+	<script src="https://cdn.rawgit.com/CDAGaming/CDAGaming.github.io/master/js/script.js"></script>
 	<script>
 		window.google = {};
 	</script>
