Removed Some Keys, due to User Request, Temp Removed Contributors List
Signed-off-by: CDAGaming <cstack2011@yahoo.com>

--- a/Pages/App_APIHub.html
+++ b/Pages/App_APIHub.html
@@ -39,7 +39,7 @@
 			<br></br>
 			<center>
 				<a class="navbar-btn btn-primary btn" href="https://www.mediafire.com/?6diedpf89aucp"><i class="fa fa-windows" aria-hidden="true"></i> Download </a>
-				<a class="navbar-btn btn-primary btn" href="https://pastebin.com/raw/nHUp1WQR"> Contributors </a>
+				<!-- <a class="navbar-btn btn-primary btn" href="https://pastebin.com/raw/nHUp1WQR"> Contributors </a> -->
 				<a class="navbar-btn btn-primary btn" href="https://github.com/CDAGaming/APIHub"><i class="fa fa-github" aria-hidden="true"></i> Source </a>
 			</center>
 			<br></br>
@@ -69,16 +69,6 @@
 						<td>7K1H4G9B7I6N9Q5G2M1V</td>
 						<td style="color:#00E676"><b>150</b></td>
 						<td>6/08/2017</td>
-					</tr>
-					<tr>
-						<td>0T7A6B7L1C0T5K0K2R7V</td>
-						<td style="color:#00E676"><b>150</b></td>
-						<td>6/17/2017</td>
-					</tr>
-					<tr>
-						<td>0J1M7Z9A2U0B3U9R1E8V</td>
-						<td style="color:#00E676"><b>150</b></td>
-						<td>6/17/2017</td>
 					</tr>
 					<tr>
 						<td>6W0C3O6Y1N4U7L7L2Q4C</td>
