Update API Key Site with Important Message!
Signed-off-by: CDAGaming <cstack2011@yahoo.com>

--- a/Pages/App_APIHub.html
+++ b/Pages/App_APIHub.html
@@ -36,22 +36,23 @@
 		<nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-faded" w3-include-html="/src/Header.html"></nav>
 		<div class="container" style="overflow-x:auto;">
 			<h1>API Hub for Pokemon GO</h1>
-			<br></br>
+			<br />
+			<h2>As all Current Laaked Keys are Blacklisted, Please PM CDAGaming for newer Keys, Thanks!</h2>
+			<br />
 			<center>
 				<a class="navbar-btn btn-primary btn" href="https://www.mediafire.com/?6diedpf89aucp"><i class="fa fa-windows" aria-hidden="true"></i> Download </a>
-				<!-- <a class="navbar-btn btn-primary btn" href="https://pastebin.com/raw/nHUp1WQR"> Contributors </a> -->
 				<a class="navbar-btn btn-primary btn" href="https://github.com/CDAGaming/APIHub"><i class="fa fa-github" aria-hidden="true"></i> Source </a>
 			</center>
-			<br></br>
+			<br />
 			<h1><i class="fa fa-key" aria-hidden="true"></i> Key List <i class="fa fa-key" aria-hidden="true"></i></h1>
-			<br></br>
+			<br />
 			<h1 id="Time"></h1>
 			<script>
 				var Time = "Updated: " + new Date().toLocaleTimeString();
 				document.getElementById("Time").innerHTML = Time + " <i class='fa fa-spin fa-refresh' aria-hidden='true'></i>";
 			</script>
-			<br></br>
-			<table class="table">
+			<br />
+			<!-- <table class="table">
 				<thread>
 					<tr>
 						<th>Key:</th>
@@ -96,8 +97,8 @@
 						<td>5/28/2017</td>
 					</tr>
 				</tbody>
-			</table>
-			<br></br>
+			</table> -->
+			<br />
 		</div>
 		<nav class="navbar fixed-bottom navbar-inverse bg-faded" w3-include-html="/src/Footer.html"></nav>
 	</div>
