--- a/Pages/App_APIHub.html
+++ b/Pages/App_APIHub.html
@@ -35,11 +35,11 @@
 	<div style="display:none;" id="webDiv" class="animate-bottom">
 		<nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-faded" w3-include-html="/src/Header.html"></nav>
 		<div class="container" style="overflow-x:auto;">
-			<h1>API Hub for Pokemon GO</h1>
+			<h1>API Keys for Pokemon GO</h1>
 			<br />
-			<h2>As all Current Laaked Keys are Blacklisted, Please PM CDAGaming for newer Keys, Thanks!</h2>
+			<h2>As all Currently Leaked Keys were recently Blacklisted, Please PM CDAGaming for newer Keys, Thanks!</h2>
 			<br />
-			<center>
+			<!-- <center>
 				<a class="navbar-btn btn-primary btn" href="https://www.mediafire.com/?6diedpf89aucp"><i class="fa fa-windows" aria-hidden="true"></i> Download </a>
 				<a class="navbar-btn btn-primary btn" href="https://github.com/CDAGaming/APIHub"><i class="fa fa-github" aria-hidden="true"></i> Source </a>
 			</center>
@@ -52,7 +52,7 @@
 				document.getElementById("Time").innerHTML = Time + " <i class='fa fa-spin fa-refresh' aria-hidden='true'></i>";
 			</script>
 			<br />
-			<!-- <table class="table">
+			<table class="table">
 				<thread>
 					<tr>
 						<th>Key:</th>
