Make the Message Centered for APIHub HTML

--- a/Pages/App_APIHub.html
+++ b/Pages/App_APIHub.html
@@ -37,7 +37,7 @@
 		<div class="container" style="overflow-x:auto;">
 			<h1>API Keys for Pokemon GO</h1>
 			<br />
-			<h2>As all Currently Leaked Keys were recently Blacklisted, Please PM CDAGaming for newer Keys, Thanks!</h2>
+			<center><h2>As all Currently Leaked Keys were recently Blacklisted, Please PM CDAGaming for newer Keys, Thanks!</h2></center>
 			<br />
 			<!-- <center>
 				<a class="navbar-btn btn-primary btn" href="https://www.mediafire.com/?6diedpf89aucp"><i class="fa fa-windows" aria-hidden="true"></i> Download </a>
