--- a/Pages/App_APIHub.html
+++ b/Pages/App_APIHub.html
@@ -37,67 +37,9 @@
 		<div class="container" style="overflow-x:auto;">
 			<h1>API Keys for Pokemon GO</h1>
 			<br />
-			<center><h2>As all Currently Leaked Keys were recently Blacklisted, Please PM CDAGaming for newer Keys, Thanks!</h2></center>
-			<br />
-			<!-- <center>
-				<a class="navbar-btn btn-primary btn" href="https://www.mediafire.com/?6diedpf89aucp"><i class="fa fa-windows" aria-hidden="true"></i> Download </a>
-				<a class="navbar-btn btn-primary btn" href="https://github.com/CDAGaming/APIHub"><i class="fa fa-github" aria-hidden="true"></i> Source </a>
-			</center>
-			<br />
-			<h1><i class="fa fa-key" aria-hidden="true"></i> Key List <i class="fa fa-key" aria-hidden="true"></i></h1>
-			<br />
-			<h1 id="Time"></h1>
-			<script>
-				var Time = "Updated: " + new Date().toLocaleTimeString();
-				document.getElementById("Time").innerHTML = Time + " <i class='fa fa-spin fa-refresh' aria-hidden='true'></i>";
-			</script>
-			<br />
-			<table class="table">
-				<thread>
-					<tr>
-						<th>Key:</th>
-						<th>RPM:</th>
-						<th>Expires:</th>
-					</tr>
-				</thread>
-				<tbody>
-					<tr>
-						<td>7Q0O5E0B0L5J2J2F2V3P</td>
-						<td style="color:#00E676"><b>150</b></td>
-						<td>6/07/17</td>
-					</tr>
-					<tr>
-						<td>7K1H4G9B7I6N9Q5G2M1V</td>
-						<td style="color:#00E676"><b>150</b></td>
-						<td>6/08/2017</td>
-					</tr>
-					<tr>
-						<td>6W0C3O6Y1N4U7L7L2Q4C</td>
-						<td style="color:#00E676"><b>150</b></td>
-						<td>5/28/2017</td>
-					</tr>
-					<tr>
-						<td>0Y2F7Y6Y4S1Y9R1P1I5M</td>
-						<td style="color:#00E676"><b>150</b></td>
-						<td>5/28/2017</td>
-					</tr>
-					<tr>
-						<td>3F0J0V3P4Z7Y6H9A8P5Z</td>
-						<td style="color:#00E676"><b>150</b></td>
-						<td>5/28/2017</td>
-					</tr>
-					<tr>
-						<td>1L0W9B1U4M6X7U7Y5V2U</td>
-						<td style="color:#00E676"><b>150</b></td>
-						<td>5/28/2017</td>
-					</tr>
-					<tr>
-						<td>8W5F5G9X0H6M4W9E5B6I</td>
-						<td style="color:#00E676"><b>150</b></td>
-						<td>5/28/2017</td>
-					</tr>
-				</tbody>
-			</table> -->
+			<div class="typeform-widget" data-url="https://cdagaming.typeform.com/to/LwYK2c" data-text="Get an API Key!" style="width:100%;height:500px;"></div>
+			<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+			<div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by<a href="https://www.typeform.com/examples/?utm_campaign=LwYK2c&amp;utm_source=typeform.com-8542348-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-poweredbytypeform&amp;utm_term=EN" style="color: #999" target="_blank">Typeform</a></div>
 			<br />
 		</div>
 		<nav class="navbar fixed-bottom navbar-inverse bg-faded" w3-include-html="/src/Footer.html"></nav>
