New Form for APIHub HTML
Signed-off-by: CDAGaming <cstack2011@yahoo.com>

--- a/Pages/App_APIHub.html
+++ b/Pages/App_APIHub.html
@@ -37,8 +37,7 @@
 		<div class="container" style="overflow-x:auto;">
 			<h1>API Keys for Pokemon GO</h1>
 			<br />
-			<center><div class="typeform-widget" data-url="https://cdagaming.typeform.com/to/LwYK2c" data-text="Get an API Key!" style="width:100%;height:500px;"></div></center>
-			<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+			<center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfi7rQtYRz1KwLueN3VmaZznhq4MTXNCJoNHZKCL9b0crGXmQ/viewform?embedded=true" width="100%" height="500px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></center>
 			<br />
 		</div>
 		<nav class="navbar fixed-bottom navbar-inverse bg-faded" w3-include-html="/src/Footer.html"></nav>
