--- a/Pages/App_APIHub.html
+++ b/Pages/App_APIHub.html
@@ -37,7 +37,11 @@
 		<div class="container" style="overflow-x:auto;">
 			<h1>API Keys for Pokemon GO</h1>
 			<br />
-			<center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfi7rQtYRz1KwLueN3VmaZznhq4MTXNCJoNHZKCL9b0crGXmQ/viewform?embedded=true" width="100%" height="500px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></center>
+			<center>
+				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfi7rQtYRz1KwLueN3VmaZznhq4MTXNCJoNHZKCL9b0crGXmQ/viewform?embedded=true" width="100%" height="500px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+				<br />
+				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSZKXgtwNiPuA7mq453LLF-DJeRQZusej8CmQ1aNiErWu5Hw/viewform?embedded=true" width="100%" height="500px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+			</center>
 			<br />
 		</div>
 		<nav class="navbar fixed-bottom navbar-inverse bg-faded" w3-include-html="/src/Footer.html"></nav>
